# iifle-ai

./: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  render-build.sh  render.yaml
.claude/: settings.local.json
app/: config.py  database.py  main.py
app/api/: deps.py
app/api/v1/: assessments.py  auth.py  auto_intake.py  battlemap.py  chat.py  companies.py  diagnostic.py  documents.py  intake.py  reports.py  research.py  router.py  settings.py
app/models/: __init__.py  assessment.py  battlemap.py  chat.py  company.py  diagnostic.py  document.py  intake.py  report.py  research.py  user.py
app/schemas/: assessment.py  auth.py  chat.py  company.py  report.py
app/schemas/intake/: stage_1.py  stage_2.py
app/services/: auth_service.py  company_service.py  document_service.py  intake_service.py
app/services/ai/: auto_intake.py  client.py  deepseek_client.py  document_parser.py  gemini_client.py  groq_client.py  provider.py  research.py  web_search.py
app/services/chat/: tools.py  (+2 more)
migrations/: env.py
migrations/versions/: 15e98be144d2_add_assessment_error_and_failed_status.py  26d381978bcd_add_brand_name_to_companies.py  75e3d9ba8b3c_initial_schema.py  903a4f2522ef_fix_all_timestamps_tz.py  9f38b1b8c0d2_add_assessment_progress_message.py  a45a407f0458_fix_remaining_timestamps_tz.py  a688d96736e0_fix_intake_timestamps_tz.py  b1c2d3e4f5a6_add_diagnostics_table.py  c7d3f82a0491_add_battle_maps_table.py  d8a91b4f2c10_add_battlemap_section_analyses.py  f4e6cf6103e0_fix_research_timestamps_tz.py
scripts/: seed_demo.py  seed_demo_reports.py
(+23 files in other folders)
