[project]
name = "iifle-backend"
version = "0.1.0"
description = "IIFLE AI Capital Structure Platform - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "boto3>=1.35.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "pymupdf>=1.24.0",
    "weasyprint>=62.0",
    "python-pptx>=1.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "groq>=0.12.0",
    "openai>=1.0.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"
